# ghop-SSManager

./: .gitignore  CHANGELOG.md  IMPROVEMENTS.md  ISSUES.md  PR_DESCRIPTION.md  QUICK_START.md  README.md  app.py  create_template.py  master.db  pyproject.toml  requirements.md  run_app.bat  run_app.command  settings.py  start_backend.bat  start_frontend.bat
backend/: app.py  database.py  main.py  master.db  schema.py  settings.py  utils.py
backend/app/: main.py  models.py  schema.py
backend/app/api/v1/routers/: audit_logs.py  devices.py  (+1 more)
backend/app/core/: config.py  database.py  utils.py
backend/app/scripts/: import_data.py
backend/data/: master_tables_dummy.xlsx  spec_sheet_template.xlsx
backend/data/templates/: specsheet_template.xlsm  specsheet_template.xlsx
backend/routers/: audit_logs.py  devices.py  tables.py
backend/scripts/: import_data.py  update_dummy_data.py
backend/storage/: master_tables_dummy.xlsx
backend/storage/templates/: specsheet_template.xlsx
data/: master_tables_dummy.xlsx
demo/slides/: PRESENTATION.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  DataTable.jsx  DetailDrawer.jsx  Sidebar.jsx  ThemeContext.jsx  ThemeToggle.jsx  index.css
frontend/src/components/: DataTable.jsx  DetailDrawer.jsx  ThemeToggle.jsx
frontend/src/lib/: api.js
frontend/src/pages/: AuditLogs.jsx  MasterView.jsx  UserView.jsx
scripts/: create_shortcuts.bat  import_data.bat  import_data.command  import_data.py  run_app.bat  run_app.command  start_backend.bat  start_frontend.bat
