[project]
name = "gh-ssmanager-open"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "sqlalchemy>=2.0.36",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.17",
    "httpx>=0.28.1",
    "pydantic>=2.12.4",
    "pillow>=12.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "poethepoet>=0.38.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.6",
    "types-openpyxl>=3.1.5.20250919",
]


[tool.poe.tasks]
format = "uv run ruff format ."
lint = "uv run ruff check --fix ."
type-check = "uv run mypy ."

check = ["format", "lint", "type-check"]
